# FireFusionNet

./: .gitignore  README.md  environment.yml  pyproject.toml
fire_fusion/: predict.py  train.py  train_utils.py
fire_fusion/analysis/: metrics.py  pca.py  plots.py
fire_fusion/config/: dataset_config.py  feature_config.py  path_config.py
fire_fusion/dataset/: SOURCING.md  build.py  build_utils.py  data_loader.py  grid.py
fire_fusion/dataset/processors/: proc_croads.py  proc_derived_feats.py  proc_gpw.py  proc_gridmet.py  proc_landfire.py  proc_lightning.py  proc_modis.py  proc_nlcd.py  proc_usda.py  proc_usfs.py  processor.py
fire_fusion/model/: model.py  modules.py  params.json
